--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ aiostream = "^0.5.2"
 cachetools = "^5.3.3"
 llama-index = "^0.11.17"
 rich = "^13.9.4"
+influxdb-client = "^1.48.0"
 
 [tool.poetry.dependencies.uvicorn]
 extras = [ "standard" ]
